TinyCompiler/src/Antlr/Small_JavaParser.java
// Generated from C:/Users/pc/IdeaProjects/TinyCompiler\Small_Java.g4 by ANTLR 4.7.2
package Antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Small_JavaParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		FLOAT_NUMBER=1, INT_NUMBER=2, IMPORT=3, MODIF=4, LIB=5, CLASS=6, MAIN=7, 
		COMMA=8, TYPE=9, MOV=10, LPAREN=11, RPAREN=12, PLUS=13, MINUS=14, TIMES=15, 
		DIV=16, GT=17, GTE=18, LT=19, LTE=20, EQ=21, NEQ=22, NOT=23, AND=24, OR=25, 
		POINT=26, SC=27, LCB=28, RCB=29, IF=30, ELSE=31, THEN=32, READ=33, WRITE=34, 
		FORMAT=35, STRING=36, ID=37, WS=38;
	public static final int
		RULE_file = 0, RULE_imports = 1, RULE_single_import = 2, RULE_code_bloc = 3, 
		RULE_dec_class = 4, RULE_func = 5, RULE_condition = 6, RULE_instructions = 7, 
		RULE_cond = 8, RULE_comp = 9, RULE_instruction = 10, RULE_read = 11, RULE_write = 12, 
		RULE_read_expression = 13, RULE_write_expression = 14, RULE_dec = 15, 
		RULE_mov = 16, RULE_expression = 17, RULE_atom = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "imports", "single_import", "code_bloc", "dec_class", "func", 
			"condition", "instructions", "cond", "comp", "instruction", "read", "write", 
			"read_expression", "write_expression", "dec", "mov", "expression", "atom"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'import'", null, null, "'class_SJ'", "'main_SJ'", 
			"','", null, "':='", "'('", "')'", "'+'", "'-'", "'*'", "'/'", "'>'", 
			"'>='", "'<'", "'<='", "'='", "'!='", "'!'", "'&'", "'|'", "'.'", "';'", 
			"'{'", "'}'", "'Si'", "'Sinon'", "'Alors'", "'In_SJ'", "'Out_SJ'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "FLOAT_NUMBER", "INT_NUMBER", "IMPORT", "MODIF", "LIB", "CLASS", 
			"MAIN", "COMMA", "TYPE", "MOV", "LPAREN", "RPAREN", "PLUS", "MINUS", 
			"TIMES", "DIV", "GT", "GTE", "LT", "LTE", "EQ", "NEQ", "NOT", "AND", 
			"OR", "POINT", "SC", "LCB", "RCB", "IF", "ELSE", "THEN", "READ", "WRITE", 
			"FORMAT", "STRING", "ID", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Small_Java.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Small_JavaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FileContext extends ParserRuleContext {
		public ImportsContext imports() {
			return getRuleContext(ImportsContext.class,0);
		}
		public Code_blocContext code_bloc() {
			return getRuleContext(Code_blocContext.class,0);
		}
		public TerminalNode EOF() { return getToken(Small_JavaParser.EOF, 0); }
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Small_JavaVisitor ) return ((Small_JavaVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			imports();
			setState(39);
			code_bloc();
			setState(40);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportsContext extends ParserRuleContext {
		public List<Single_importContext> single_import() {
			return getRuleContexts(Single_importContext.class);
		}
		public Single_importContext single_import(int i) {
			return getRuleContext(Single_importContext.class,i);
		}
		public ImportsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imports; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Small_JavaVisitor ) return ((Small_JavaVisitor<? extends T>)visitor).visitImports(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportsContext imports() throws RecognitionException {
		ImportsContext _localctx = new ImportsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_imports);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(42);
				single_import();
				}
				}
				setState(47);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Single_importContext extends ParserRuleContext {
		public Token lib;
		public TerminalNode IMPORT() { return getToken(Small_JavaParser.IMPORT, 0); }
		public TerminalNode SC() { return getToken(Small_JavaParser.SC, 0); }
		public TerminalNode LIB() { return getToken(Small_JavaParser.LIB, 0); }
		public Single_importContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_single_import; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Small_JavaVisitor ) return ((Small_JavaVisitor<? extends T>)visitor).visitSingle_import(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Single_importContext single_import() throws RecognitionException {
		Single_importContext _localctx = new Single_importContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_single_import);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(IMPORT);
			setState(49);
			((Single_importContext)_localctx).lib = match(LIB);
			setState(50);
			match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Code_blocContext extends ParserRuleContext {
		public Dec_classContext dec_class() {
			return getRuleContext(Dec_classContext.class,0);
		}
		public Code_blocContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_code_bloc; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Small_JavaVisitor ) return ((Small_JavaVisitor<? extends T>)visitor).visitCode_bloc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Code_blocContext code_bloc() throws RecognitionException {
		Code_blocContext _localctx = new Code_blocContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_code_bloc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(52);
			dec_class();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dec_classContext extends ParserRuleContext {
		public TerminalNode MODIF() { return getToken(Small_JavaParser.MODIF, 0); }
		public TerminalNode CLASS() { return getToken(Small_JavaParser.CLASS, 0); }
		public TerminalNode ID() { return getToken(Small_JavaParser.ID, 0); }
		public TerminalNode LCB() { return getToken(Small_JavaParser.LCB, 0); }
		public FuncContext func() {
			return getRuleContext(FuncContext.class,0);
		}
		public TerminalNode RCB() { return getToken(Small_JavaParser.RCB, 0); }
		public List<DecContext> dec() {
			return getRuleContexts(DecContext.class);
		}
		public DecContext dec(int i) {
			return getRuleContext(DecContext.class,i);
		}
		public Dec_classContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dec_class; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Small_JavaVisitor ) return ((Small_JavaVisitor<? extends T>)visitor).visitDec_class(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Dec_classContext dec_class() throws RecognitionException {
		Dec_classContext _localctx = new Dec_classContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_dec_class);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(MODIF);
			setState(55);
			match(CLASS);
			setState(56);
			match(ID);
			setState(57);
			match(LCB);
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TYPE) {
				{
				{
				setState(58);
				dec();
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(64);
			func();
			setState(65);
			match(RCB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(Small_JavaParser.MAIN, 0); }
		public TerminalNode LCB() { return getToken(Small_JavaParser.LCB, 0); }
		public InstructionsContext instructions() {
			return getRuleContext(InstructionsContext.class,0);
		}
		public TerminalNode RCB() { return getToken(Small_JavaParser.RCB, 0); }
		public FuncContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Small_JavaVisitor ) return ((Small_JavaVisitor<? extends T>)visitor).visitFunc(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncContext func() throws RecognitionException {
		FuncContext _localctx = new FuncContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_func);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			match(MAIN);
			setState(68);
			match(LCB);
			setState(69);
			instructions();
			setState(70);
			match(RCB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public InstructionsContext then;
		public InstructionsContext els;
		public TerminalNode IF() { return getToken(Small_JavaParser.IF, 0); }
		public TerminalNode LPAREN() { return getToken(Small_JavaParser.LPAREN, 0); }
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(Small_JavaParser.RPAREN, 0); }
		public TerminalNode THEN() { return getToken(Small_JavaParser.THEN, 0); }
		public List<TerminalNode> LCB() { return getTokens(Small_JavaParser.LCB); }
		public TerminalNode LCB(int i) {
			return getToken(Small_JavaParser.LCB, i);
		}
		public List<TerminalNode> RCB() { return getTokens(Small_JavaParser.RCB); }
		public TerminalNode RCB(int i) {
			return getToken(Small_JavaParser.RCB, i);
		}
		public List<InstructionsContext> instructions() {
			return getRuleContexts(InstructionsContext.class);
		}
		public InstructionsContext instructions(int i) {
			return getRuleContext(InstructionsContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(Small_JavaParser.ELSE, 0); }
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Small_JavaVisitor ) return ((Small_JavaVisitor<? extends T>)visitor).visitCondition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		ConditionContext _localctx = new ConditionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_condition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(IF);
			setState(73);
			match(LPAREN);
			setState(74);
			cond(0);
			setState(75);
			match(RPAREN);
			setState(76);
			match(THEN);
			setState(77);
			match(LCB);
			setState(78);
			((ConditionContext)_localctx).then = instructions();
			setState(79);
			match(RCB);
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(80);
				match(ELSE);
				setState(81);
				match(LCB);
				setState(82);
				((ConditionContext)_localctx).els = instructions();
				setState(83);
				match(RCB);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionsContext extends ParserRuleContext {
		public List<InstructionContext> instruction() {
			return getRuleContexts(InstructionContext.class);
		}
		public InstructionContext instruction(int i) {
			return getRuleContext(InstructionContext.class,i);
		}
		public InstructionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instructions; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Small_JavaVisitor ) return ((Small_JavaVisitor<? extends T>)visitor).visitInstructions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionsContext instructions() throws RecognitionException {
		InstructionsContext _localctx = new InstructionsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_instructions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << READ) | (1L << WRITE) | (1L << ID))) != 0)) {
				{
				{
				setState(87);
				instruction();
				}
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondContext extends ParserRuleContext {
		public CondContext left;
		public Token not;
		public CondContext notval;
		public CondContext compval;
		public Token op;
		public CondContext right;
		public TerminalNode NOT() { return getToken(Small_JavaParser.NOT, 0); }
		public List<CondContext> cond() {
			return getRuleContexts(CondContext.class);
		}
		public CondContext cond(int i) {
			return getRuleContext(CondContext.class,i);
		}
		public TerminalNode LPAREN() { return getToken(Small_JavaParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(Small_JavaParser.RPAREN, 0); }
		public CompContext comp() {
			return getRuleContext(CompContext.class,0);
		}
		public TerminalNode AND() { return getToken(Small_JavaParser.AND, 0); }
		public TerminalNode OR() { return getToken(Small_JavaParser.OR, 0); }
		public CondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cond; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Small_JavaVisitor ) return ((Small_JavaVisitor<? extends T>)visitor).visitCond(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondContext cond() throws RecognitionException {
		return cond(0);
	}

	private CondContext cond(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		CondContext _localctx = new CondContext(_ctx, _parentState);
		CondContext _prevctx = _localctx;
		int _startState = 16;
		enterRecursionRule(_localctx, 16, RULE_cond, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(94);
				((CondContext)_localctx).not = match(NOT);
				setState(95);
				((CondContext)_localctx).notval = cond(5);
				}
				break;
			case 2:
				{
				setState(96);
				match(LPAREN);
				setState(97);
				((CondContext)_localctx).compval = cond(0);
				setState(98);
				match(RPAREN);
				}
				break;
			case 3:
				{
				setState(100);
				comp();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(111);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(109);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
					case 1:
						{
						_localctx = new CondContext(_parentctx, _parentState);
						_localctx.left = _prevctx;
						_localctx.left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_cond);
						setState(103);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(104);
						((CondContext)_localctx).op = match(AND);
						setState(105);
						((CondContext)_localctx).right = cond(5);
						}
						break;
					case 2:
						{
						_localctx = new CondContext(_parentctx, _parentState);
						_localctx.left = _prevctx;
						_localctx.left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_cond);
						setState(106);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(107);
						((CondContext)_localctx).op = match(OR);
						setState(108);
						((CondContext)_localctx).right = cond(4);
						}
						break;
					}
					} 
				}
				setState(113);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class CompContext extends ParserRuleContext {
		public ExpressionContext left;
		public Token op;
		public ExpressionContext right;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode GT() { return getToken(Small_JavaParser.GT, 0); }
		public TerminalNode LT() { return getToken(Small_JavaParser.LT, 0); }
		public TerminalNode GTE() { return getToken(Small_JavaParser.GTE, 0); }
		public TerminalNode LTE() { return getToken(Small_JavaParser.LTE, 0); }
		public TerminalNode EQ() { return getToken(Small_JavaParser.EQ, 0); }
		public TerminalNode NEQ() { return getToken(Small_JavaParser.NEQ, 0); }
		public CompContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comp; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Small_JavaVisitor ) return ((Small_JavaVisitor<? extends T>)visitor).visitComp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompContext comp() throws RecognitionException {
		CompContext _localctx = new CompContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_comp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			((CompContext)_localctx).left = expression(0);
			setState(115);
			((CompContext)_localctx).op = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GT) | (1L << GTE) | (1L << LT) | (1L << LTE) | (1L << EQ) | (1L << NEQ))) != 0)) ) {
				((CompContext)_localctx).op = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(116);
			((CompContext)_localctx).right = expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstructionContext extends ParserRuleContext {
		public MovContext mov() {
			return getRuleContext(MovContext.class,0);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public ReadContext read() {
			return getRuleContext(ReadContext.class,0);
		}
		public WriteContext write() {
			return getRuleContext(WriteContext.class,0);
		}
		public InstructionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruction; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Small_JavaVisitor ) return ((Small_JavaVisitor<? extends T>)visitor).visitInstruction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstructionContext instruction() throws RecognitionException {
		InstructionContext _localctx = new InstructionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_instruction);
		try {
			setState(122);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				mov();
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(119);
				condition();
				}
				break;
			case READ:
				enterOuterAlt(_localctx, 3);
				{
				setState(120);
				read();
				}
				break;
			case WRITE:
				enterOuterAlt(_localctx, 4);
				{
				setState(121);
				write();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReadContext extends ParserRuleContext {
		public TerminalNode READ() { return getToken(Small_JavaParser.READ, 0); }
		public TerminalNode LPAREN() { return getToken(Small_JavaParser.LPAREN, 0); }
		public Read_expressionContext read_expression() {
			return getRuleContext(Read_expressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(Small_JavaParser.RPAREN, 0); }
		public TerminalNode SC() { return getToken(Small_JavaParser.SC, 0); }
		public ReadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_read; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Small_JavaVisitor ) return ((Small_JavaVisitor<? extends T>)visitor).visitRead(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReadContext read() throws RecognitionException {
		ReadContext _localctx = new ReadContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_read);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(READ);
			setState(125);
			match(LPAREN);
			setState(126);
			read_expression();
			setState(127);
			match(RPAREN);
			setState(128);
			match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WriteContext extends ParserRuleContext {
		public TerminalNode WRITE() { return getToken(Small_JavaParser.WRITE, 0); }
		public TerminalNode LPAREN() { return getToken(Small_JavaParser.LPAREN, 0); }
		public Write_expressionContext write_expression() {
			return getRuleContext(Write_expressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(Small_JavaParser.RPAREN, 0); }
		public TerminalNode SC() { return getToken(Small_JavaParser.SC, 0); }
		public WriteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_write; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Small_JavaVisitor ) return ((Small_JavaVisitor<? extends T>)visitor).visitWrite(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WriteContext write() throws RecognitionException {
		WriteContext _localctx = new WriteContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_write);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(WRITE);
			setState(131);
			match(LPAREN);
			setState(132);
			write_expression();
			setState(133);
			match(RPAREN);
			setState(134);
			match(SC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Read_expressionContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(Small_JavaParser.STRING, 0); }
		public List<TerminalNode> COMMA() { return getTokens(Small_JavaParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(Small_JavaParser.COMMA, i);
		}
		public List<TerminalNode> ID() { return getTokens(Small_JavaParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(Small_JavaParser.ID, i);
		}
		public Read_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_read_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof Small_JavaVisitor ) return ((Small_JavaVisitor<? extends T>)visitor).visitRead_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Read_expressionContext read_expression() throws RecognitionException {
		Read_expressionContext _localctx = new Read_expressionContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_read_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136);
			match(STRING);
			setState(139); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(137);
				match(COMMA);
				setState(138);
				match(ID);
				}
				}
				setState(141); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==COMMA );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Write_expressionContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(Small_JavaParser.STRING, 0); }
		public List<TerminalNode> COMMA() { return getTokens(Small_JavaParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(Small_JavaParser.COMMA, i);
		}
